tests/negative/exceptions/reserved_name/input.ci
structure RuntimeException {
    string message = "x";
}

void main() {}
